--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -1,11 +1,16 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "target": "es2019",
+    "target": "es2021",
     "module": "commonjs",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
-  }
+  },
+  "include": [
+    ".eslintrc.json",
+    "src",
+    "test"
+  ]
 }
