--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "5.0.0-alpha.86",
     "@mui/material": "^5.8.4",
     "@mui/x-data-grid": "^5.12.2",
+    "@mui/x-date-pickers": "5.0.0-alpha.6",
+    "date-fns": "^2.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "eslint": "7.19.0",
-    "prettier": "^2.0.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,6 +27,8 @@
     "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
+    "eslint": "7.19.0",
+    "prettier": "^2.0.5",
     "ts-node": "^10.7.0",
     "typescript": "^4.7.3"
   },
