--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,14 +20,16 @@
     "chai": "^4.3.6",
     "eslint": "^7.32.0",
     "mocha": "~9.1.3",
+    "pino-pretty": "^8.0.0",
     "prettier": "^2.0.5",
+    "tap": "^16.3.0",
     "ts-node": "^10.8.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.7.3"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/src/server.js",
+    "start": "node dist/src/main.js",
     "test": "mocha ./test",
     "lint": "yarn lint:prettier --check && yarn lint:eslint",
     "lint:fix": "yarn lint:prettier --write && yarn lint:eslint --fix",
