--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: npm i -g pnpm@7.1.9
-    - run: npm i -g prettier@2.1.2
+    - run: npm i -g prettier
     - run: pnpm install
     - run: pnpm run lint
     - run: pnpm run build
