--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "wsrun": "^5.2.1",
-    "prettier": "2.1.2"
+    "prettier": "^2.0.5",
+    "react-scripts": "5.0.1"
   }
 }
