--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,5 +15,6 @@ jobs:
     - uses: actions/checkout@v2
     - run: npm i -g pnpm@7.1.9
     - run: pnpm install
+    - run: pnpm lint
     - run: pnpm run build
     - run: pnpm run test
