--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "test": "wsrun -e -c -s --exclude-missing test"
   },
   "dependencies": {
-    "wsrun": "^5.2.1",
-    "prettier": "^2.0.5",
-    "react-scripts": "5.0.1"
+    "wsrun": "^5.2.1"
   }
 }
