--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "isomorphic-fetch": "^3.0.0",
     "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -12,30 +13,39 @@
     "@mui/x-data-grid": "^5.12.2",
     "@mui/x-date-pickers": "5.0.0-alpha.6",
     "date-fns": "^2.28.0",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
+    "@swc-node/register": "^1.4.2",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react-hooks": "^5.0.3",
+    "@types/chai": "^4.3.1",
     "@types/jest": "^27.5.2",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/chai-as-promised": "^7.1.3",
+    "@types/isomorphic-fetch": "^0.0.36",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
+    "chai": "^4.3.6",
     "eslint": "7.19.0",
+    "jsdom": "^16.7.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^8.2.1",
     "prettier": "^2.0.5",
-    "ts-node": "^10.7.0",
+    "react": "^18.2.0",
+    "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "true",
+    "test": "mocha -r jsdom-global/register --exit",
     "eject": "react-scripts eject",
     "lint": "yarn lint:prettier --check && yarn lint:eslint",
     "lint:fix": "yarn lint:prettier --write && yarn lint:eslint --fix",
